k8s/base_setup/ingress_prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-skycom-core-ingress
  namespace: skycom-base
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - silver.skycom.vn
      secretName: skycom-tls
  rules:
    - host: silver.skycom.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-silver-web
                port:
                  number: 80
## chỉ chạy lần đầu và thay đổi host cho từng tenant line 41 (p/s: gắn ip domain tới loadbanlencer)
